// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EAEDF2",
        "height": 1,
        "marginHorizontal": 0,
        "width": undefined,
      },
      Object {},
    ]
  }
/>
`;

exports[`Divider component renders correctly horizontal 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#B2BDCD",
        "height": undefined,
        "marginVertical": 0,
        "width": 1,
      },
      Object {},
    ]
  }
/>
`;
